--- a/SocialNetwork/wwwroot/css/Login/Login.css
+++ b/SocialNetwork/wwwroot/css/Login/Login.css
@@ -14,6 +14,11 @@ body, html {
     height: 100%;
     font-family: Poppins-Regular, sans-serif;
 }
+.validation {
+    font-family: 'Ubuntu';
+    color: red;
+    font-size: 13px;
+}
 
 /*---------------------------------------------*/
 a {
@@ -197,6 +202,7 @@ iframe {
 
 .wrap-login100 {
     width: 960px;
+    height:700px;
     background: #fff;
     border-radius: 10px;
     overflow: hidden;
