--- a/SocialNetwork/Views/Account/Login.cshtml
+++ b/SocialNetwork/Views/Account/Login.cshtml
@@ -9,10 +9,10 @@
     <title>Login V1</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 
     <link rel="icon" type="image/png" href="~/css/Login/images/icons/favicon.ico" />
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="~/css/Login/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/css/Login/vendor/animate/animate.css">
     <link rel="stylesheet" type="text/css" href="~/css/Login/LoginUtils.css">
