--- a/SocialNetwork/Views/Home/Index.cshtml
+++ b/SocialNetwork/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <img src="@ViewBag.Src_ProfileImage" style="width:200px;height:200px"/>
 </div>
