--- a/SocialNetwork/Views/Home/Index.cshtml
+++ b/SocialNetwork/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model SocialNetwork.Models.UserModels.UserAccount
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <img src="@ViewBag.Src_ProfileImage" style="width:200px;height:200px"/>
+    <img src="@Model.UserInfo.ProfileImage" style="width:200px;height:200px"/>
 </div>
