--- a/SocialNetwork/Views/Account/Login.cshtml
+++ b/SocialNetwork/Views/Account/Login.cshtml
@@ -56,7 +56,7 @@
                         <span class="txt1">
                             Forgot
                         </span>
-                        <a class="txt2" href="#">
+                        <a class="txt2" asp-action="ForgotPasswordPage">
                             Username / Password?
                         </a>
                     </div>
