--- a/SocialNetwork/Views/UserPage/Profile.cshtml
+++ b/SocialNetwork/Views/UserPage/Profile.cshtml
@@ -16,49 +16,54 @@
 
         <div class="container">
             <br><br>
-            <div class="profile">
+                <div class="profile">
 
-                <div class="profile-image">
+                    <div class="profile-image">
 
-                    <img style="width:150px;height:150px" src="@Model.Item2.UserInfo.ProfileImage" alt="">
+                        <img style="width:150px;height:150px" src="@Model.Item2.UserInfo.ProfileImage" alt="">
+
+                    </div>
+
+                    <div class="profile-user-settings" style="display:flex">
+
+                        <h1 id="username" class="profile-user-name">@Model.Item2.UserIdentity.Username</h1>
+
+                        @if (User.Identity.Name == Model.Item2.UserIdentity.Username)
+                        {
+                            <button class="btn profile-edit-btn">Edit Profile</button>
+                            <button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
+
+                        }
+                        else
+                        {
+                            <a id="Follow" asp-action="Follow" style="height: 32px; display: flex; width: 105px; background-color: #0095f6; justify-content: center; flex-direction: column;" class="btn profile-edit-btn"><span style="color:white">Follow</span></a>
+                        }
+
+
+                    </div>
+                    <div class="jumbotron" style="min-height:400px;height:auto;">
+                        <img id="closeFollowers" style="cursor:pointer;top: 12px; width: 30px; position: absolute; right: 0;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/High-contrast-dialog-close.svg/1200px-High-contrast-dialog-close.svg.png"/>
+                        <ul style="overflow-y:scroll;height:400px" class="list-group" id="followersList">
+                          
+                        </ul>
+                    </div>
+                    <div class="profile-stats">
+
+                        <ul>
+                            <li><span class="profile-stat-count">@Model.Item2.UserPosts.Count()</span> posts</li>
+                            <li id="followersButton"><span id="followers" class="profile-stat-count">@Model.Item2.UserFollowers.Count()</span> followers</li>
+                            <li id="followingButton"><span id="following"class="profile-stat-count">@Model.Item2.UserFollowing.Count()</span> following</li>
+                        </ul>
+
+                    </div>
+
+                    <div class="profile-bio">
+
+                        <p><span class="profile-real-name">Jane Doe</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit 📷✈️🏕️</p>
+
+                    </div>
 
                 </div>
-
-                <div class="profile-user-settings" style="display:flex">
-
-                    <h1 id="username" class="profile-user-name">@Model.Item2.UserIdentity.Username</h1>
-
-                    @if (User.Identity.Name == Model.Item2.UserIdentity.Username)
-                    {
-                        <button class="btn profile-edit-btn">Edit Profile</button>
-                        <button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
-
-                    }
-                    else
-                    {
-                        <a id="Follow" asp-action="Follow" style="height: 32px; display: flex; width: 105px; background-color: #0095f6; justify-content: center; flex-direction: column;" class="btn profile-edit-btn"><span style="color:white">Follow</span></a>
-                    }
-
-
-                </div>
-
-                <div class="profile-stats">
-
-                    <ul>
-                        <li><span class="profile-stat-count">@Model.Item2.UserPosts.Count()</span> posts</li>
-                        <li><span  id="followers" class="profile-stat-count">@Model.Item2.UserFollowers.Count()</span> followers</li>
-                        <li><span class="profile-stat-count">@Model.Item2.UserFollowing.Count()</span> following</li>
-                    </ul>
-
-                </div>
-
-                <div class="profile-bio">
-
-                    <p><span class="profile-real-name">Jane Doe</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit 📷✈️🏕️</p>
-
-                </div>
-
-            </div>
             <!-- End of profile section -->
 
         </div>
@@ -303,6 +308,7 @@
 @section scripts{ 
 <script>
     $(document).ready(function () {
+        $(".jumbotron").hide();
         $.ajax({
             type: "GET",
             url: "/UserPage/GetUserInfo?username=" + document.getElementById("username").innerHTML,
@@ -336,6 +342,73 @@
                 }
             })
         })
+        $("#followersButton").click(function (e) {
+            e.preventDefault();
+            var followersCount = $("#followers").text();
+            if (followersCount != "0") {
+                $(".jumbotron").fadeIn();
+                var User = document.getElementById("username").innerHTML;
+                var SetData = $("#followersList");
+                $.ajax({
+                    type: "POST",
+                    url: "/UserPage/Followers?username=" + User,
+                    success: function (result) {
+                        SetData.html("");
+                        if (result.length != 0) {
+                            $.each(result, function (index, value) {
+
+                                var Data = '<li class="list-group-item user-item text-left">' +
+                                    '                                <img class="img-circle img-user img-thumbnail " src="' + value.imageUrl + '">' +
+                                    '                                <h3>' +
+                                    '                                    <a href="/UserPage/Profile/' + value.username + '">' + value.username + '</a> <br>' +
+                                    '                                </h3>' +
+                                    '                            </li>';
+
+                                SetData.append(Data);
+                            })
+                        }
+                    }
+                })
+            }
+         
+        })
+        $("#followingButton").click(function (e) {
+            e.preventDefault();
+            var followingCount = $("#following").text();
+            if (followingCount != "0") {
+                $(".jumbotron").fadeIn();
+                var User = document.getElementById("username").innerHTML;
+                var SetData = $("#followersList");
+
+                $.ajax({
+                    type: "POST",
+                    url: "/UserPage/Following?username=" + User,
+                    success: function (result) {
+                        SetData.html("");
+                        if (result.length != 0) {
+                            $.each(result, function (index, value) {
+
+                                var Data = '<li class="list-group-item user-item text-left">' +
+                                    '                                <img class="img-circle img-user img-thumbnail " src="' + value.imageUrl + '">' +
+                                    '                                <h3>' +
+                                    '                                    <a href="/UserPage/Profile/' + value.username + '">' + value.username + '</a> <br>' +
+                                    '                                </h3>' +
+                                    '                            </li>';
+
+                                SetData.append(Data);
+                            })
+                        }
+                    }
+                })
+            }
+           
+        })
+
+        $("#closeFollowers").click(function (e) {
+            e.preventDefault();
+            $(".jumbotron").hide();
+        })
+
     })
 </script>
 }
