--- a/SocialNetwork/wwwroot/css/UserPage/Index.css
+++ b/SocialNetwork/wwwroot/css/UserPage/Index.css
@@ -10,7 +10,7 @@
 }
 
 *, button, input, select, textarea {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* Vars */
