--- a/SocialNetwork/wwwroot/css/UserPage/LayoutStyle.css
+++ b/SocialNetwork/wwwroot/css/UserPage/LayoutStyle.css
@@ -1,4 +1,7 @@
 ﻿@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+*{
+    font-family:"Montserrat" sans-serif;
+}
 .dropdown-content {
     display: none;
     position: absolute;
