--- a/SocialNetwork/wwwroot/css/UserPage/Profile.css
+++ b/SocialNetwork/wwwroot/css/UserPage/Profile.css
@@ -56,10 +56,57 @@ img {
 }
 
 /* Profile Section */
-
-.profile {
-    padding: 5rem 0;
+.jumbotron {
+    position: fixed;
+    min-height: 400px;
+    height: auto;
+    left: 40%;
+    background-color: white;
+    top: 10%;
+    box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
+    z-index: 1;
 }
+}
+.jumbotron .btn {
+    color: #FFFFFF;
+    padding: 5px !important;
+    font-size: 12px !important;
+    margin-left: 20px;
+}
+
+.jumbotron label {
+    font-size: 12px;
+}
+
+.img-user {
+    height: 120px;
+    width: 120px;
+    margin-right: 20px;
+}
+.img-circle {
+   border-radius:100%;
+   width:50px;
+   height:50px;
+
+}
+
+.prj-name {
+    font-weight: bold;
+    color: #5bc0de;
+}
+
+.user-item img, .user-item h3 {
+    display: inline-block;
+}
+
+.jumbotron .btn .user-item h3 a {
+    color: #5bc0de;
+    padding: 5px !important;
+    font-size: 12px !important;
+}
+    .profile {
+        padding: 5rem 0;
+    }
 
     .profile::after {
         content: "";
