--- a/SocialNetwork/wwwroot/css/UserPage/LayoutStyle.css
+++ b/SocialNetwork/wwwroot/css/UserPage/LayoutStyle.css
@@ -13,8 +13,45 @@
     box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
     z-index: 1;
 }
+#createPostPopupBG {
+    z-index: 2;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #000000d4;
+}
+    #addPostForm svg{
+        display:initial;
+    }
+#ChooseFilesButton {
+    width: 167px;
+    height: 30px;
+    background-color: #0095f6;
+    border-radius:5px;
+    position:absolute;
+    left:30%;
+    top:50%;
+    cursor:pointer;
+    padding:4px;
+}
+    #ChooseFilesButton span{
+        color:white;
+        font-weight:bold;
+    }
+#addPostForm {
+    width: 400px;
+    height: 400px;
+    top: 100px;
+    text-align: center;
+    border-radius: 30px;
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 40%);
+    position: fixed;
+    z-index: 1;
+    left: 570px;
+    padding:115px;
+}
 .people-list {
-
     -moz-transition: .5s;
     -o-transition: .5s;
     -webkit-transition: .5s;
@@ -27,6 +64,9 @@
     content: " ";
     clear: both;
     height: 0
+}
+.clearfix .about .name{
+    font-weight:bold;
 }
 
     .people-list .chat-list li {
