--- a/SocialNetwork/Views/Shared/_Layout.cshtml
+++ b/SocialNetwork/Views/Shared/_Layout.cshtml
@@ -107,7 +107,9 @@
     </header>
     <div id="createPostPopupBG">
         <div id="addPostForm">
-            <div class="mb-3">
+            <div></div>
+            <div id="imageChooseForm" class="mb-3">
+
                 <form>
                     <input style="" multiple class="form-control" type="file" id="formFileMultiple">
 
@@ -117,12 +119,25 @@
                 </form>
 
                 <svg aria-label="Значок медіафайлу, як-от зображення або відео" class="_8-yf5 " color="#262626" fill="#262626" height="77" role="img" viewBox="0 0 97.6 77.3" width="96">
-                <path d="M16.3 24h.3c2.8-.2 4.9-2.6 4.8-5.4-.2-2.8-2.6-4.9-5.4-4.8s-4.9 2.6-4.8 5.4c.1 2.7 2.4 4.8 5.1 4.8zm-2.4-7.2c.5-.6 1.3-1 2.1-1h.2c1.7 0 3.1 1.4 3.1 3.1 0 1.7-1.4 3.1-3.1 3.1-1.7 0-3.1-1.4-3.1-3.1 0-.8.3-1.5.8-2.1z" fill="currentColor"></path>
-                <path d="M84.7 18.4L58 16.9l-.2-3c-.3-5.7-5.2-10.1-11-9.8L12.9 6c-5.7.3-10.1 5.3-9.8 11L5 51v.8c.7 5.2 5.1 9.1 10.3 9.1h.6l21.7-1.2v.6c-.3 5.7 4 10.7 9.8 11l34 2h.6c5.5 0 10.1-4.3 10.4-9.8l2-34c.4-5.8-4-10.7-9.7-11.1zM7.2 10.8C8.7 9.1 10.8 8.1 13 8l34-1.9c4.6-.3 8.6 3.3 8.9 7.9l.2 2.8-5.3-.3c-5.7-.3-10.7 4-11 9.8l-.6 9.5-9.5 10.7c-.2.3-.6.4-1 .5-.4 0-.7-.1-1-.4l-7.8-7c-1.4-1.3-3.5-1.1-4.8.3L7 49 5.2 17c-.2-2.3.6-4.5 2-6.2zm8.7 48c-4.3.2-8.1-2.8-8.8-7.1l9.4-10.5c.2-.3.6-.4 1-.5.4 0 .7.1 1 .4l7.8 7c.7.6 1.6.9 2.5.9.9 0 1.7-.5 2.3-1.1l7.8-8.8-1.1 18.6-21.9 1.1zm76.5-29.5l-2 34c-.3 4.6-4.3 8.2-8.9 7.9l-34-2c-4.6-.3-8.2-4.3-7.9-8.9l2-34c.3-4.4 3.9-7.9 8.4-7.9h.5l34 2c4.7.3 8.2 4.3 7.9 8.9z" fill="currentColor"></path>
-                <path d="M78.2 41.6L61.3 30.5c-2.1-1.4-4.9-.8-6.2 1.3-.4.7-.7 1.4-.7 2.2l-1.2 20.1c-.1 2.5 1.7 4.6 4.2 4.8h.3c.7 0 1.4-.2 2-.5l18-9c2.2-1.1 3.1-3.8 2-6-.4-.7-.9-1.3-1.5-1.8zm-1.4 6l-18 9c-.4.2-.8.3-1.3.3-.4 0-.9-.2-1.2-.4-.7-.5-1.2-1.3-1.1-2.2l1.2-20.1c.1-.9.6-1.7 1.4-2.1.8-.4 1.7-.3 2.5.1L77 43.3c1.2.8 1.5 2.3.7 3.4-.2.4-.5.7-.9.9z" fill="currentColor"></path>
+                    <path d="M16.3 24h.3c2.8-.2 4.9-2.6 4.8-5.4-.2-2.8-2.6-4.9-5.4-4.8s-4.9 2.6-4.8 5.4c.1 2.7 2.4 4.8 5.1 4.8zm-2.4-7.2c.5-.6 1.3-1 2.1-1h.2c1.7 0 3.1 1.4 3.1 3.1 0 1.7-1.4 3.1-3.1 3.1-1.7 0-3.1-1.4-3.1-3.1 0-.8.3-1.5.8-2.1z" fill="currentColor"></path>
+                    <path d="M84.7 18.4L58 16.9l-.2-3c-.3-5.7-5.2-10.1-11-9.8L12.9 6c-5.7.3-10.1 5.3-9.8 11L5 51v.8c.7 5.2 5.1 9.1 10.3 9.1h.6l21.7-1.2v.6c-.3 5.7 4 10.7 9.8 11l34 2h.6c5.5 0 10.1-4.3 10.4-9.8l2-34c.4-5.8-4-10.7-9.7-11.1zM7.2 10.8C8.7 9.1 10.8 8.1 13 8l34-1.9c4.6-.3 8.6 3.3 8.9 7.9l.2 2.8-5.3-.3c-5.7-.3-10.7 4-11 9.8l-.6 9.5-9.5 10.7c-.2.3-.6.4-1 .5-.4 0-.7-.1-1-.4l-7.8-7c-1.4-1.3-3.5-1.1-4.8.3L7 49 5.2 17c-.2-2.3.6-4.5 2-6.2zm8.7 48c-4.3.2-8.1-2.8-8.8-7.1l9.4-10.5c.2-.3.6-.4 1-.5.4 0 .7.1 1 .4l7.8 7c.7.6 1.6.9 2.5.9.9 0 1.7-.5 2.3-1.1l7.8-8.8-1.1 18.6-21.9 1.1zm76.5-29.5l-2 34c-.3 4.6-4.3 8.2-8.9 7.9l-34-2c-4.6-.3-8.2-4.3-7.9-8.9l2-34c.3-4.4 3.9-7.9 8.4-7.9h.5l34 2c4.7.3 8.2 4.3 7.9 8.9z" fill="currentColor"></path>
+                    <path d="M78.2 41.6L61.3 30.5c-2.1-1.4-4.9-.8-6.2 1.3-.4.7-.7 1.4-.7 2.2l-1.2 20.1c-.1 2.5 1.7 4.6 4.2 4.8h.3c.7 0 1.4-.2 2-.5l18-9c2.2-1.1 3.1-3.8 2-6-.4-.7-.9-1.3-1.5-1.8zm-1.4 6l-18 9c-.4.2-.8.3-1.3.3-.4 0-.9-.2-1.2-.4-.7-.5-1.2-1.3-1.1-2.2l1.2-20.1c.1-.9.6-1.7 1.4-2.1.8-.4 1.7-.3 2.5.1L77 43.3c1.2.8 1.5 2.3.7 3.4-.2.4-.5.7-.9.9z" fill="currentColor"></path>
                 </svg>
             </div>
+            <div id="slider" hidden>
+                <div style="position: absolute; left: 13px; width: 20px; top: 10px;cursor:pointer" id="deleteImageFromGallery">
+                    <img src="~/Img/Delete.png" />
+                </div>
+                <div style="left: 0; top: 184px; border: none; width: 25px; position: absolute; border-radius: 100%;" id="LeftButton">
+                    <img src="~/Img/LeftArrow.png" />
+                </div>
+                <div style="right: 0; top: 184px; border: none; width: 25px; position: absolute; border-radius: 100%;transform:scale(-1,1);" id="RightButton">
+                    <img src="~/Img/LeftArrow.png" />
+                </div>
+            </div>
+
         </div>
+      
     </div>
     
     @RenderBody()
@@ -134,7 +149,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script>
-
+       
         $(document).ready(function () {
             var src = $("#profileImageSrc").text();
             $("#createPostPopupBG").hide();
@@ -222,20 +237,28 @@
                 e.stopPropagation();
                 $("#createPostPopupBG").fadeToggle();
             })
-            $("#photosPostForm").on("change", function () {
-                alert("changed");
-            });
+         
 
 
 
             var input = $("#formFileMultiple");
             var files = [];
-
+            var index = 0;
+            var reader;
             input.change(function () {
-
+                $("#imageChooseForm").hide();
+            
+               
+                input.html("");
+                files = [];
                 for (var i = 0; i < input[0].files.length; i++) {
-                    files.push(input[0].files[i]);
+                    files.push(URL.createObjectURL(input[0].files[i]));
                 }
+                if (files.length > 1) {
+                    $("#slider").removeAttr("hidden");
+                }
+                
+                $("#addPostForm").css("background-image", 'url(' + files[0] + ')')
                 sessionStorage.setItem("photo", JSON.stringify(files));
             })
 
@@ -243,8 +266,39 @@
       
                 var request = new XMLHttpRequest();
                 var form = new FormData();
-                console.log(files[2]);
+                
             });
+            //Gallery
+            $("#RightButton").click(function() {
+                if (index < files.length-1) {
+                    index++;
+                } else {
+                    index = 0;
+                }
+                
+                $("#addPostForm").css("background-image", 'url(' + files[index] + ')')
+            })
+            $("#LeftButton").click(function () {
+                if (index > 0) {
+                    index--;
+                } else {
+                    index = files.length-1;
+                }
+
+                $("#addPostForm").css("background-image", 'url(' + files[index] + ')')
+            })
+            $("#deleteImageFromGallery").click(function () {
+                alert("clicked")
+                files.splice(index, 1);
+                if (index - 1 < 0) index = files.length - 1;;
+                $("#addPostForm").css("background-image", 'url(' + files[index] + ')')
+                if (files.length == 0) {
+                    $("#slider").attr("hidden", true);
+                    $("#imageChooseForm").show();
+                    input.val(null);
+                } 
+            })
+          
         });
     </script>
     @await RenderSectionAsync("Scripts", required: false)
