--- a/SocialNetwork/wwwroot/css/UserPage/LayoutStyle.css
+++ b/SocialNetwork/wwwroot/css/UserPage/LayoutStyle.css
@@ -45,18 +45,20 @@
     text-align: center;
     border-radius: 30px;
     background-color: white;
+    background: no-repeat center;
+    background-size: cover;
     box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 40%);
     position: fixed;
     z-index: 1;
     left: 570px;
-    padding:115px;
+    padding: 115px;
 }
-.people-list {
-    -moz-transition: .5s;
-    -o-transition: .5s;
-    -webkit-transition: .5s;
-    transition: .5s
-}
+    .people-list {
+        -moz-transition: .5s;
+        -o-transition: .5s;
+        -webkit-transition: .5s;
+        transition: .5s
+    }
 .clearfix:after {
     visibility: hidden;
     display: block;
