Created feeds and likes with comment possibility

--- a/SocialNetwork/Views/Shared/_Layout.cshtml
+++ b/SocialNetwork/Views/Shared/_Layout.cshtml
@@ -341,7 +341,7 @@
                         processData:false,
                         data: formData,
                         success: function (json) {
-                            alert(json.path);
+                            alert(json.success);
                         }
                     })
                 })
