--- a/SocialNetwork/Views/Account/Register.cshtml
+++ b/SocialNetwork/Views/Account/Register.cshtml
@@ -67,7 +67,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fas fa-images"></i> Profile image</span>
                     </div>
-                    <input required asp-for="ProfileImage" type="file" class="form-control" accept="image/*" />
+                    <input asp-for="ProfileImage" type="file" class="form-control" accept="image/*" />
                 </div>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
